plugins {
    id 'java-library'
    id 'maven-publish'
}

repositories {
    maven { url 'https://jitpack.io' }
    mavenLocal()
    mavenCentral()
}

dependencies {
    api('com.github.StarDevelopmentLLC:clock:0.1.2')
    api('com.github.StarDevelopmentLLC:time:0.1.0')
    api('com.github.StarDevelopmentLLC:registry:0.1.0')
    api('com.github.StarDevelopmentLLC:helper:0.1.1')
    api('com.github.StarDevelopmentLLC:property:0.1.4')
    api('com.github.StarDevelopmentLLC:observable:0.1.2')
    api('com.github.StarDevelopmentLLC:eventbus:0.1.1')
    api('com.github.StarDevelopmentLLC:actors:0.1.1')
    compileOnly 'com.google.code.gson:gson:2.2.4'
    compileOnly 'com.google.guava:guava:31.1-jre'
}

group = 'com.thenexusreborn'
version = '1.15-ALPHA'
description = 'NexusAPI'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

processResources {
    filesMatching("*.txt") {
        expand(project.properties)
    }
}

publishing {
    publications {
        maven(MavenPublication) {
            from components.java
        }
    }
}

tasks.compileJava.dependsOn(clean)